BUG FIX text is changed at order form text button from submit->order. add new user stuck was on spinner at register/admin page. indication for username was missing on nav-bar order checkbox was not clickable from the label

--- a/public/src/app/shared/shared-dialog-forms/new-order-dialog-form/new-order-dialog-form.component.css
+++ b/public/src/app/shared/shared-dialog-forms/new-order-dialog-form/new-order-dialog-form.component.css
@@ -15,13 +15,14 @@
 .new-order-component-price {
   font-size: 11px;
   position: absolute;
-  width: 190px;
+  width: 225px;
   text-align: center;
 }
 
 .new-order-component-checkbox-wrapper {
   width: 150px;
   margin: auto;
+  text-align: center;
 }
 
 .new-order-total-price{
